@@ -1,3 +1,8 @@
+2010-09-03 S. Thiell <stephane.thiell@cea.fr>
+
+	* Worker/Ssh.py: Fix issue with clush -l USER by separating underlying ssh
+	"-l USER" in two shell arguments (trac ticket #113).
+
 2010-08-31 S. Thiell <stephane.thiell@cea.fr>
 
 	* scripts/clush.py: Live per-line gathering (-bL mode) improvements.
